--- a/CSS/Q10ANS/style.css
+++ b/CSS/Q10ANS/style.css
@@ -33,14 +33,29 @@ article{
     margin-top: 4vh;
     margin-left: 4vh;
     width:120vh;
+    font-size:30px;
+
+}
+.image{
+    background-color: transparent !important;
+    display: flex;
+}
+.img{
+    width: 220px;
+    height: 200px;
+    margin: 30px;
+    background-color: #d7bf67;
+    border-radius: .6em;
+}
+h2{
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size:30px ;
+    background-color:transparent;
 }
-.image{
-    background-color: #fff;
-    width: 120px;
+p{
+    background-color: transparent;
     display: flex;
-    justify-content: space-between
+    justify-content: center;
+    padding: 20px;
 }
