--- a/CSS/periodictable/style.css
+++ b/CSS/periodictable/style.css
@@ -7,31 +7,58 @@ h1{
     padding: 5%;
 }
 .grouping{
-    max-width: 1100px;
+    max-width: 1120px;
     display: flex;
     justify-content: space-between;
 }
 .period {
-    max-height: 1000px;
+    max-width: 1140px;
     display:flex;
     justify-content: space-between;
     flex-direction: column;
 }
 .rows{
-    height: 70px;
+    height: 90px;
 }
 .rows1{
     display: flex;
 }
-.helium1{
-    color: #000000;
-    background-color: #ffee00;
-    padding: 2%;
-    margin-left: 3%;
-    border: 1px solid black;
+.pline1{
+    display: flex;
+    width: 1140px;
+    justify-content:space-between;
+    margin-left: 50px;
+}
+.box {
+    background-color: #e4a47e;
+    box-sizing: border-box;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    width:60px;
+    height: 50px;
+    margin: 2px;
+    border: solid #000000 3px;
 
 }
-.he2{
+.rows{
     display: flex;
-    justify-content: flex-end;
+}
+.pline2left {
+    display: flex;
+}
+.pline2right{
+    display: flex;
+    background-color: #fff;
+}
+.boxy{
+    background-color: #d7f030;
+    box-sizing: border-box;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    width:60px;
+    height: 50px;
+    margin: 2px;
+    border: solid #000000 3px;
 }
