--- a/CSS/INEURONHOMEPAGE/style.css
+++ b/CSS/INEURONHOMEPAGE/style.css
@@ -37,7 +37,7 @@ nav{
     width: 99.8%;
 }
 /* pure hardworkHeading section  */
-.hardworkHeading > h2{
+h2{
     display: flex;
     justify-content: center;
     font-size: 50px;
@@ -79,4 +79,10 @@ nav{
 .achievmentCard span {
     color: #454545;
     font-size: 30px;
+}
+/* achiever's work with section  */
+.liveCardContainer{
+    background-color: #7b2626;
+    display: flex;
+    
 }
