hall of fame card

--- a/CSS/INEURONHOMEPAGE/style.css
+++ b/CSS/INEURONHOMEPAGE/style.css
@@ -81,13 +81,26 @@ h2{
     font-size: 30px;
 }
 /* achiever's work with section  */
+.achievment{
+    background-color: #EEF0F4;
+    padding: 50px 0px 50px 0px;
+}
 .liveCardContainer{
-    background-color: #7b2626;
     display: flex;
-    
+    justify-self: center;
+    align-items: center;
+    height: 200px;
 }
 /* hall of fame  */
 .hallCard{
-    background-color: #850909;
     display: flex;
+    margin: 20px;
+}
+.peopleCard{
+    height: 340px;
+    margin: 25px;
+    padding: 20px;
+    width: 350px;
+    border-radius: 1em;
+    box-shadow: 1px 1px 10px rgb(126, 124, 124);
 }
