--- a/CSS/INEURONHOMEPAGE/style.css
+++ b/CSS/INEURONHOMEPAGE/style.css
@@ -104,3 +104,30 @@ h2{
     border-radius: 1em;
     box-shadow: 1px 1px 10px rgb(126, 124, 124);
 }
+
+/* live program  */
+.programCard{
+    margin-top: 150px;
+}
+.mainCard{
+    display: flex;
+}
+.programCard > p{
+    text-align: center;
+    font-size: 18px;
+    color: #454545;
+}
+.card{
+    height: 380px;
+    margin: 25px;
+    padding: 20px;
+    width: 380px;
+    border-radius: 1em;
+    box-shadow: 1px 1px 10px rgb(126, 124, 124);
+}
+.card-image img {
+    height: 213px;
+}
+h4{
+    color: #2C4480;
+}
