--- a/CSS/INEURONHOMEPAGE/style.css
+++ b/CSS/INEURONHOMEPAGE/style.css
@@ -97,12 +97,30 @@ h2{
     margin: 20px;
 }
 .peopleCard{
-    height: 340px;
     margin: 25px;
     padding: 20px;
+    max-height: fit-content;
     width: 350px;
     border-radius: 1em;
     box-shadow: 1px 1px 10px rgb(126, 124, 124);
+}
+.livecard{
+    display: flex;
+    justify-content: center;
+}
+.livecard img{
+    height: 120px;
+    border-radius: 5em;
+}
+.liveCardname{
+    text-align: center;
+}
+.linkedin-image{
+    display: flex;
+    justify-content: center;
+}
+.linkedin-image img{
+    height: 30px;
 }
 
 /* live program  */
@@ -130,4 +148,17 @@ h2{
 }
 h4{
     color: #2C4480;
+}
+.coursePrice{
+    display: flex;
+    justify-content: space-between;
+}
+.livebox{
+    background-color: #8acceb;
+    width: 45px;
+    height: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: .3em;
 }
