--- a/CSS/INEURONHOMEPAGE/style.css
+++ b/CSS/INEURONHOMEPAGE/style.css
@@ -61,6 +61,7 @@ h2{
     justify-content: space-between;
     align-items: center;
     margin-top: 50px;
+    padding: 40px;
 }
 .card{
     width: 500px;
